Added to readme, added code to controllers etc..
